# MECE4520

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  programming_env_conf.md  pyproject.toml  python_setup.md  requirements.txt
data/: ads_spend.csv  auto_mpg.csv  logistic_regression.csv  random_numbers.txt  simple_linear_regression.csv  titanic.csv
lectures/lecture_1/: Hello_world.ipynb  README.md  vector_and_matrix.ipynb
lectures/lecture_10/: README.md  multi_armed_bandit.py  multiarm_bandit.ipynb
lectures/lecture_2/: README.md  statistics_primer.ipynb
lectures/lecture_3/: README.md  auto_mpg.csv  linear_regression.ipynb
lectures/lecture_4/: README.md  breast_cancer_data.csv  census_income_data.csv  classification.ipynb
lectures/lecture_5/: README.md  gradient_descent.ipynb  linear_regression_review.ipynb  reivew.ipynb
lectures/lecture_6/: PCA.ipynb  README.md  auc_roc.ipynb  hyperparameter_tuning.ipynb  model_selection.ipynb
lectures/lecture_7/: README.md  bootstrap.ipynb  cancer_tree  decision_tree.ipynb
lectures/lecture_8/: README.md  neural_network.ipynb
lectures/lecture_9/: README.md  Spectral_clustering.ipynb  clustering.ipynb
lectures/notebooks/: 00_hello_world.ipynb  03_statistics_probability_primer.ipynb  05_hypothesis_test.ipynb  06_linear_regression_EDA.ipynb  08_multiple_linear_regression.ipynb  11_metrics.ipynb  12_cross_validation.ipynb  13_pca.ipynb  14_decision_trees.ipynb  15_bootstrap.ipynb  15_gradient_boosting.ipynb  16_neural_network_intro.ipynb  17_neural_network_training.ipynb  18_clustering.ipynb  19_spectral_clustering.ipynb  1_vector_and_matrix.ipynb  20_MAB.ipynb  21_cart_pole.ipynb  21_gridworld.ipynb  2_linear_algebra_examples.ipynb  cancer_tree  (+9 more)
(+35 files in other folders)
